opam-version: "1.2"
maintainer: "Marek Kubica <marek@xivilization.net>"
author: "Marek Kubica <marek@xivilization.net"
homepage: "https://github.com/Leonidas-from-XIV/issuubox"
dev-repo: "git@github.com:Leonidas-from-XIV/issuubox.git"
bug-reports: "https://github.com/Leonidas-from-XIV/issuubox/issues"
build: [["dune" "build" "-p" name "-j" jobs]]
build-test: [["dune" "runtest" "-p" name "-j" jobs]]
depends: [
  "dune" {build}
  "base" {>= "v0.11" & < "v0.12"}
  "cohttp" {>= "1.0" & < "1.1"}
  "cohttp-lwt" {>= "1.0" & < "1.1"}
  "cohttp-lwt-unix" {>= "1.0" & < "1.1"}
  "irmin-watcher" {>= "0.3.0" & < "0.4.0"}
]
